[FIX] sap.m.ObjectAttribute: Focus clear visible on IE
BCP: 1780009120

CR-Id: 012006153200000097042017

--- a/src/sap.m/src/sap/m/themes/base/ObjectAttribute.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectAttribute.less
@@ -141,3 +141,9 @@ html.sap-desktop .sapMObjectAttributeActive:focus {
 .sapMOH .sapMObjectAttributeActive:focus .sapMObjectAttributeText {
 	text-decoration: none;
 }
+
+html[data-sap-ui-browser ^= "ie"], html[data-sap-ui-browser^="ed"] {
+	.sapMObjectAttributeDiv {
+		padding: 0.125rem 0.125rem 0.125rem 0.125rem;
+	}
+}
